Updates github action for configuring aws credentials

--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -45,7 +45,7 @@ jobs:
           ./aws/install --update
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1-node18
+        uses: aws-actions/configure-aws-credentials@v2
         with:
             aws-region: us-east-1
             role-to-assume: 'arn:aws:iam::${{ secrets.AWS_ACCOUNT_NUMBER }}:role/weather-api-github-action-runner'
