--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Install AWSCLI
         run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zipmit " -o "awscliv2.zip"
           unzip awscliv2.zip
           ./aws/install --update
 
