--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           node-version: '18'
           registry-url: 'https://npm.pkg.github.com'
-          alwayrs-auth: true
+          always-auth: true
           cache: yarn
           cache-dependency-path: '**/yarn.lock'
         env:
