--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "taylors-weather-lambda",
   "version": "0.1.0",
+  "license": "UNLICENSED",
   "bin": {
     "weather-lambda": "bin/weather-lambda.js"
   },
@@ -12,15 +13,19 @@
   },
   "devDependencies": {
     "@types/node": "18.14.6",
-    "aws-cdk": "^2.78.0",
-    "ts-node": "^10.9.1",
-    "typescript": "~4.9.5"
+    "@types/aws-lambda": "^8.10.119",
+    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
+    "@aws-sdk/client-secrets-manager": "^3.423.0",
+    "esbuild": "^0.15.12",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-prettier": "^4.0.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.200.0",
-    "@aws-cdk/aws-lambda": "^1.200.0",
-    "aws-cdk-lib": "^2.78.0",
+    "aws-lambda": "^1.0.7",
+    "aws-cdk-lib": "^2.100.0",
     "constructs": "^10.2.12",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "typescript": "~5.1.3"
   }
 }
