--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
             "files": ["*.{js,jsx}"],
             "rules": {
                 "@typescript-eslint/require-await": "off",
-                "@typescript-eslint/no-floating-promises": ["off"]
+                "@typescript-eslint/no-floating-promises": "off"
             }
         },
         {
