--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
+    "allowJs": true,
     "strictNullChecks": true,
     "noImplicitThis": true,
     "alwaysStrict": true,
