--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "local": "lambda-local -l handlers/weather.js -h handler --watch 8008"
   },
   "devDependencies": {
-    "@types/node": "18.14.6",
-    "@types/aws-lambda": "^8.10.119",
-    "@typescript-eslint/parser": "^6.11.0",
-    "@typescript-eslint/eslint-plugin": "6.11.0",
     "@aws-sdk/client-secrets-manager": "^3.423.0",
+    "@types/aws-lambda": "^8.10.119",
+    "@types/jest": "^29.5.12",
+    "@types/node": "18.14.6",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "esbuild": "^0.15.12",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "lambda-local": "^2.2.0"
+    "jest": "^29.7.0",
+    "lambda-local": "^2.2.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "aws-lambda": "^1.0.7",
     "aws-cdk-lib": "^2.100.0",
+    "aws-lambda": "^1.0.7",
     "constructs": "^10.2.12",
     "source-map-support": "^0.5.21",
     "typescript": "~5.1.3"
