Testing AWS credentials step

--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -17,7 +17,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  pipeline:
+  prodDeployment:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -33,9 +33,17 @@ jobs:
           cache-dependency-path: '**/yarn.lock'
         env:
           AWS_ACCOUNT_NUMBER: ${{ secrets.AWS_ACCOUNT_NUMBER }}
+          AWS_REGION: us-east-1
 
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
       
       - name : Run Unit Tests
         run: yarn test
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_NUMBER }}:role/GithubActionsProvider
+          role-session-name: prodDeployment
+          aws-region: us-east-1
