--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -8,9 +8,14 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  AWS_REGION : 'us-east-1'
+  AWS_ACCOUNT_NUMBER: ${{ secrets.AWS_ACCOUNT_NUMBER }}
+
 permissions:
   contents: read
   pull-requests: read
+  id-token: write
 
 concurrency:
   group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
