--- a/.github/workflows/dev-deployment-pipeline.yml
+++ b/.github/workflows/dev-deployment-pipeline.yml
@@ -1,4 +1,4 @@
-name: 'Weather Lambda Prod Deployment'
+name: 'Weather Lambda Dev Deployment'
 
 on:
   workflow_dispatch:
@@ -39,6 +39,9 @@ jobs:
 
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
+
+      - name: Install AWS CDK
+        run: yarn install aws-cdk
       
       - name : Run Unit Tests
         run: yarn test
