Adds another environment variable for testing

--- a/.github/workflows/dev-deployment-pipeline.yml
+++ b/.github/workflows/dev-deployment-pipeline.yml
@@ -8,6 +8,7 @@ on:
 env:
   AWS_REGION : 'us-east-1'
   AWS_ACCOUNT_NUMBER: ${{ secrets.AWS_ACCOUNT_NUMBER }}
+  OPEN_WEATHER_API_ID: ${{ secrets.OPEN_WEATHER_API_ID }}
 
 permissions:
   contents: read
