--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     ],
     "declaration": true,
     "strict": true,
+    "allowJs": true,
+    "outDir": "./dist",
     "noImplicitAny": true,
     "strictNullChecks": true,
     "noImplicitThis": true,
@@ -26,6 +28,7 @@
   },
   "exclude": [
     "node_modules",
-    "cdk.out"
+    "cdk.out",
+    "./dist/**"
   ]
 }
