--- a/.eslintrc
+++ b/.eslintrc
@@ -1,31 +1,32 @@
 {
     "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 2021,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
+    },
     "extends": [
         "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended"
     ],
-    "rules": {
-        "@typescript/no-unused-vars": [
-            "error",
-            {
-                "ignoreRestSimblings": true,
-                "argsIgnorePattern": "^_"
-            }
-        ]
-    },
     "overrides": [
-        {
-            "files": ["*.{js,jsx}"],
-            "rules": {
-                "@typescript-eslint/require-await": "off",
-                "@typescript-eslint/no-floating-promises": "off"
-            }
-        },
         {
             "files": ["*.ts"],
             "rules": {
                 "@typescirpt-eslint/no-explicit-any": "off"
             }
         }
-    ]
+    ],
+    "rules": {
+        "indent": "error",
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "ignoreRestSiblings": true,
+                "argsIgnorePattern": "^_"
+            }
+        ]
+    }
 }
