--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
+    "lint": "eslint . --ext ts --max-warnings 0",
     "test": "jest",
     "deploy": "cdk deploy -c env=dev",
     "deploy:prod": "cdk deploy -c env=prod",
@@ -21,10 +22,12 @@
     "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "esbuild": "^0.15.12",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "lambda-local": "^2.2.0",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2"
   },
