--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "lint": "eslint . --ext ts --max-warnings 0",
+    "lint": "eslint . --ext .js,.ts --max-warnings 0",
     "test": "jest",
     "deploy": "cdk deploy -c env=dev",
     "deploy:prod": "cdk deploy -c env=prod",
     "local": "lambda-local -l handlers/weather.js -h handler --watch 8008"
   },
   "devDependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.423.0",
-    "@types/aws-lambda": "^8.10.119",
+    "@aws-sdk/client-secrets-manager": "^3.578.0",
+    "@types/aws-lambda": "^8.10.138",
     "@types/jest": "^29.5.12",
-    "@types/node": "18.14.6",
-    "@typescript-eslint/eslint-plugin": "6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "esbuild": "^0.15.12",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "esbuild": "^0.21.3",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -34,8 +34,8 @@
   "dependencies": {
     "aws-cdk-lib": "^2.143.0",
     "aws-lambda": "^1.0.7",
-    "constructs": "^10.2.12",
+    "constructs": "^10.3.0",
     "source-map-support": "^0.5.21",
-    "typescript": "~5.1.3"
+    "typescript": "~5.4.5"
   }
 }
