--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/aws-lambda": "^8.10.138",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "esbuild": "^0.21.3",
@@ -29,6 +30,7 @@
     "jest": "^29.7.0",
     "lambda-local": "^2.2.0",
     "prettier": "^3.2.5",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2"
   },
