--- a/.github/workflows/prod-deployment-pipeline.yml
+++ b/.github/workflows/prod-deployment-pipeline.yml
@@ -49,7 +49,10 @@ jobs:
         run: yarn add aws-cdk
       
       - name : Run Unit Tests
-        run: yarn test
+        run: yarn test unit
+
+      - name : Run Integration Tests
+        run: yarn test integration
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
