Updates eslint to run successfully

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,5 +27,6 @@
                 "argsIgnorePattern": "^_"
             }
         ]
-    }
+    },
+    "ignorePatterns": ["**.config.ts", ".gitignore", "node_modules/**/*", ".github", "cdk.out/**/*"]
 }
