--- a/.github/workflows/prod-deployment-pipeline.yml
+++ b/.github/workflows/prod-deployment-pipeline.yml
@@ -49,10 +49,10 @@ jobs:
         run: yarn add aws-cdk
       
       - name : Run Unit Tests
-        run: yarn test unit
+        run: yarn test
 
       - name : Run Integration Tests
-        run: yarn test integration
+        run: yarn integration
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
