--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.143.0",
+    "aws-cdk-lib": "^2.146.0",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.3.0",
+    "date-fns": "^3.6.0",
     "source-map-support": "^0.5.21",
     "typescript": "~5.4.5"
   }
