--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "aws-lambda": "^1.0.7",
     "constructs": "^10.3.0",
     "date-fns": "^3.6.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "source-map-support": "^0.5.21",
     "typescript": "~5.4.5"
   }
