Updates integration test command with environment variables

--- a/.github/workflows/prod-deployment-pipeline.yml
+++ b/.github/workflows/prod-deployment-pipeline.yml
@@ -57,6 +57,9 @@ jobs:
 
       - name : Run Integration Tests
         run: yarn integration
+        env:
+          AWS_ACCOUNT_NUMBER: ${{ env.AWS_ACCOUNT_NUMBER }}
+          AWS_REGION: us-east-1
 
       - name: Deploy Prod
         shell: bash
