--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "aws-cdk-lib": "^2.148.1",
     "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1692.0",
     "constructs": "^10.3.0",
     "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
