Adds log group names for dev and prod

--- a/bin/config/prod.config.json
+++ b/bin/config/prod.config.json
@@ -6,5 +6,6 @@
     "lambdaFreemiumFunctionName": "GetWeatherFreemiumProdHandler",
     "lambdaPremiumFunctionName": "GetWeatherPremiumProdHandler",
     "lambdaAuthorizerName": "GetWeatherPremiumProdAuthorizer",
-    "restApiName": "GetWeatherApiProd"
+    "restApiName": "GetWeatherApiProd",
+    "apiGatewayLogGroupName": "GetWeatherApiGatewayProd"
 }
